--- a/views/index.html
+++ b/views/index.html
@@ -21,7 +21,9 @@
         <link rel="stylesheet" type="text/css" href="styles/css/master/global.css" media="screen">
 
         <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?libraries=places&sensor=false&key=AIzaSyBll4kPCZuJIaBsvCv_gHCRTzk5-e-8WjM"></script>
-        <script type="text/javascript" src="bower_components/jquery/dist/jquery.js"></script>
+        <script type="text/javascript" src="bower_components/jquery/dist/jquery-2.2.4.min.js"></script>
+        <script type="text/javascript" src="bower_components/jquery/dist/jquery-migrate-1.4.1.js"></script>
+        <!--<script type="text/javascript" src="bower_components/jquery/dist/jquery.js"></script>-->
         <script src="http://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.2/angular.js"></script>
         <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.2/angular-animate.js"></script>
         <script type="text/javascript" src="bower_components/slick-carousel/slick/slick.js"></script>
@@ -32,7 +34,6 @@
         <script type="text/javascript" src="javascripts/ngAutocomplete.js"></script>
         <script type="text/javascript" src="javascripts/v-accordion.js"></script>
         <script type="text/javascript" src="javascripts/ngDialog.js"></script>
-        <script type="text/javascript" src="javascripts/video-background.module.js"></script>
         <script type="text/javascript" src="javascripts/angular-video-bg.min.js"></script>
         <script type="text/javascript" src="https://www.youtube.com/iframe_api"></script>
         <script type="text/javascript" src="javascripts/angular-youtube-embed.js"></script>
